docs/kubernetes/k8s/otp-server_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: '2025-03-25T17:52:37Z'
  generateName: otp-server-84c7df8bdd-
  labels:
    pod-template-hash: 84c7df8bdd
    workload.user.cattle.io/workloadselector: apps.deployment-local-otp-server
  managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:generateName: {}
          f:labels:
            .: {}
            f:pod-template-hash: {}
            f:workload.user.cattle.io/workloadselector: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"a3f70d94-c5ef-452b-9e8a-249aaea67a36"}: {}
        f:spec:
          f:containers:
            k:{"name":"otp-server"}:
              .: {}
              f:image: {}
              f:imagePullPolicy: {}
              f:name: {}
              f:ports:
                .: {}
                k:{"containerPort":8088,"protocol":"TCP"}:
                  .: {}
                  f:containerPort: {}
                  f:name: {}
                  f:protocol: {}
              f:resources: {}
              f:securityContext:
                .: {}
                f:allowPrivilegeEscalation: {}
                f:privileged: {}
                f:readOnlyRootFilesystem: {}
                f:runAsNonRoot: {}
              f:terminationMessagePath: {}
              f:terminationMessagePolicy: {}
          f:dnsPolicy: {}
          f:enableServiceLinks: {}
          f:restartPolicy: {}
          f:schedulerName: {}
          f:securityContext: {}
          f:terminationGracePeriodSeconds: {}
      manager: k3s
      operation: Update
      time: '2025-03-25T17:52:37Z'
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:conditions:
            k:{"type":"ContainersReady"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:status: {}
              f:type: {}
            k:{"type":"Initialized"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:status: {}
              f:type: {}
            k:{"type":"PodReadyToStartContainers"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:status: {}
              f:type: {}
            k:{"type":"Ready"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:status: {}
              f:type: {}
          f:containerStatuses: {}
          f:hostIP: {}
          f:hostIPs: {}
          f:phase: {}
          f:podIP: {}
          f:podIPs:
            .: {}
            k:{"ip":"10.42.0.20"}:
              .: {}
              f:ip: {}
          f:startTime: {}
      manager: k3s
      operation: Update
      subresource: status
      time: '2025-03-25T17:52:40Z'
  name: otp-server-84c7df8bdd-h5t8t
  namespace: local
  ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicaSet
      name: otp-server-84c7df8bdd
      uid: a3f70d94-c5ef-452b-9e8a-249aaea67a36
  resourceVersion: '49376'
  uid: e74f2b55-9891-4655-8816-f0e1055b2f06
spec:
  containers:
    - image: 0x6a4b/otp:server
      imagePullPolicy: IfNotPresent
      name: otp-server
      ports:
        - containerPort: 8088
          name: otp-server
          protocol: TCP
      resources: {}
      securityContext:
        allowPrivilegeEscalation: false
        privileged: false
        readOnlyRootFilesystem: false
        runAsNonRoot: false
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access-mjzfp
          readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: k3d-mycluster-server-0
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
  volumes:
    - name: kube-api-access-mjzfp
      projected:
        defaultMode: 420
        sources:
          - serviceAccountToken:
              expirationSeconds: 3607
              path: token
          - configMap:
              items:
                - key: ca.crt
                  path: ca.crt
              name: kube-root-ca.crt
          - downwardAPI:
              items:
                - fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
                  path: namespace
status:
  conditions:
    - lastProbeTime: null
      lastTransitionTime: '2025-03-25T17:52:40Z'
      status: 'True'
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: '2025-03-25T17:52:37Z'
      status: 'True'
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: '2025-03-25T17:52:40Z'
      status: 'True'
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: '2025-03-25T17:52:40Z'
      status: 'True'
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: '2025-03-25T17:52:37Z'
      status: 'True'
      type: PodScheduled
  containerStatuses:
    - containerID: >-
        containerd://31a60f51e19093661db6b031c95fe5588dc59e4e85c4a6821d8a09713533cc79
      image: docker.io/0x6a4b/otp:server
      imageID: >-
        docker.io/0x6a4b/otp@sha256:4f994d32367d91ef3b935f4fdb70cf1b0d1a67e08bec3759cb336e3789b4e4fa
      lastState: {}
      name: otp-server
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: '2025-03-25T17:52:39Z'
      volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access-mjzfp
          readOnly: true
          recursiveReadOnly: Disabled
  hostIP: 172.18.0.2
  hostIPs:
    - ip: 172.18.0.2
  phase: Running
  podIP: 10.42.0.20
  podIPs:
    - ip: 10.42.0.20
  qosClass: BestEffort
  startTime: '2025-03-25T17:52:37Z'
